--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.1.5",
     "date-fns": "^2.29.3",
     "fontsource-inter": "^4.0.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
